feat: add contact section and code sample to About page in both languages

--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -15,3 +15,15 @@ I am passionate about creating **robust, scalable, and simple systems** that del
 
 **My core values are clarity, precision, and collaboration.**
 I enjoy working closely with clients to find the right solutions – and delivering with high quality.
+
+<Callout type="info" title="Focus">
+  I prioritize **clarity** and **scalability**. If you need help modernizing legacy systems or moving to the cloud, let's talk.
+</Callout>
+
+You can reach me via <a href="/contact">the contact page</a>.
+
+```bash
+# Example: stack I often use
+next build && vercel deploy
+```
+
