--- a/content/about/nb.mdx
+++ b/content/about/nb.mdx
@@ -15,3 +15,15 @@ Jeg brenner for å skape **robuste, skalerbare og enkle løsninger** som gir ver
 
 **Verdiene mine er klarhet, presisjon og samarbeid.**
 Jeg liker å finne gode løsninger sammen med kunden – og levere med høy kvalitet.
+
+<Callout type="info" title="Fokus">
+  Jeg prioriterer **klarhet** og **skalerbarhet**. Trenger du hjelp med modernisering av eldre systemer eller flytting til skyen, ta gjerne kontakt.
+</Callout>
+
+Du kan nå meg via <a href="/contact">kontaktsiden</a>.
+
+```bash
+# Eksempel: verktøy jeg ofte bruker
+next build && vercel deploy
+```
+
