feat: add tech stack component and display on home and about pages

--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -13,6 +13,21 @@ I am passionate about creating **robust, scalable, and simple systems** that del
 
 ---
 
+## Tech Stack
+
+<TechStack
+  items={[
+    { label: "Kotlin", category: "backend" },
+    { label: "Java", category: "backend" },
+    { label: "Spring Boot", category: "backend" },
+    { label: "Next.js", category: "frontend" },
+    { label: "React", category: "frontend" },
+    { label: "GCP", category: "cloud" },
+    { label: "Azure", category: "cloud" },
+    { label: "AI/ML", category: "ai" }
+  ]}
+/>
+
 **My core values are clarity, precision, and collaboration.**
 I enjoy working closely with clients to find the right solutions – and delivering with high quality.
 
