feat: add icons to tech stack and move items to shared config

--- a/content/about/nb.mdx
+++ b/content/about/nb.mdx
@@ -15,18 +15,7 @@ Jeg brenner for å skape **robuste, skalerbare og enkle løsninger** som gir ver
 
 ## Teknologistack
 
-<TechStack
-  items={[
-    { label: "Kotlin", category: "backend" },
-    { label: "Java", category: "backend" },
-    { label: "Spring Boot", category: "backend" },
-    { label: "Next.js", category: "frontend" },
-    { label: "React", category: "frontend" },
-    { label: "GCP", category: "cloud" },
-    { label: "Azure", category: "cloud" },
-    { label: "AI/ML", category: "ai" }
-  ]}
-/>
+<TechStack />
 
 **Verdiene mine er klarhet, presisjon og samarbeid.**
 Jeg liker å finne gode løsninger sammen med kunden – og levere med høy kvalitet.
