feat: add grouped tech stack component with category headings

--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -15,7 +15,7 @@ I am passionate about creating **robust, scalable, and simple systems** that del
 
 ## Tech Stack
 
-<TechStack />
+<TechStackGrouped />
 
 **My core values are clarity, precision, and collaboration.**
 I enjoy working closely with clients to find the right solutions – and delivering with high quality.
