--- a/content/about/nb.mdx
+++ b/content/about/nb.mdx
@@ -15,7 +15,7 @@ Jeg brenner for å skape **robuste, skalerbare og enkle løsninger** som gir ver
 
 ## Teknologistack
 
-<TechStack />
+<TechStackGrouped />
 
 **Verdiene mine er klarhet, presisjon og samarbeid.**
 Jeg liker å finne gode løsninger sammen med kunden – og levere med høy kvalitet.
