docs: expand SPK project description with role, cloud and impact details

--- a/content/projects/spk-modernization.en.mdx
+++ b/content/projects/spk-modernization.en.mdx
@@ -1,17 +1,25 @@
 ---
 title: "Pension modernization (SPK)"
 slug: "spk-modernization"
-role: "Lead Architect"
+role: "Solution Architect & Developer"
 year: "2023–2024"
 tags: ["Microservices","Kotlin","GCP"]
-summary: "From monolith to microservices with measurable delivery velocity gains."
+summary: "From monolith to microservices and cloud, with measurable gains in delivery velocity and member experience."
 ---
 
 ## Problem
-Legacy monolith slowed delivery…
+A large legacy monolith slowed delivery and made it difficult to adapt to new business and member needs. At the same time, SPK needed to prepare for a transition to the cloud.
 
 ## Solution
-Service boundaries, Kotlin + Spring Boot, CI/CD…
+As part of SPK’s architecture group and developer in the team, I contributed to migrating the monolith into microservices with clear service boundaries, Kotlin + Spring Boot, and CI/CD.
+
+I also joined the cloud team delivering a proof-of-concept app on GCP in only 2 days – with the requirement to integrate with on-premise internal systems.
+
+In addition, I had lead responsibility for the complex domain of pension payments, developing solutions that provide members with a clear overview of past and future payments on their dashboard.
 
 ## Impact
-Reduced lead time by 45%…
+## Impact
+- Reduced lead time by 45%  
+- Enabled faster support for new products and regulatory changes  
+- Established hybrid architecture between on-prem and cloud  
+- Improved member experience through data insights, interviews, and customer service feedback
