--- a/content/projects/spk-modernization.nb.mdx
+++ b/content/projects/spk-modernization.nb.mdx
@@ -1,17 +1,24 @@
 ---
 title: "Modernisering av pensjon (SPK)"
 slug: "spk-modernization"
-role: "Løsningsarkitekt"
+role: "Løsningsarkitekt og utvikler"
 year: "2023–2024"
 tags: ["Mikrotjenester","Kotlin","GCP"]
-summary: "Fra monolitt til mikrotjenester med målbare forbedringer."
+summary: "Fra monolitt til mikrotjenester og sky, med målbare forbedringer i leveransehastighet og brukeropplevelse."
 ---
 
 ## Problem
-Eldre monolitt ga treg leveranse…
+En stor monolitt ga treg leveransehastighet og gjorde det vanskelig å møte nye forretnings- og brukerbehov. Samtidig måtte SPK forberede seg på overgang til skyen.  
 
 ## Løsning
-Tjenestegrenser, Kotlin + Spring Boot, CI/CD…
+Som en del av SPKs arkitekturgruppe og utvikler i team har jeg bidratt til å migrere monolitt til mikrotjenester med tydelige tjenestegrenser, Kotlin + Spring Boot og CI/CD.  
+
+Jeg var også en del av sky-teamet som leverte en POC på GCP på bare 2 dager, med krav om integrasjon mot interne on-prem-tjenester.  
+
+I tillegg hadde jeg hovedansvaret for domene *utbetalinger*, et av de mest komplekse områdene i SPK. Her utviklet jeg løsninger som gir medlemmene oversikt over fremtidige og tidligere utbetalinger direkte på forsiden.
 
 ## Effekt
-Redusert ledetid med 45 %…
+- Redusert ledetid med 45 %  
+- Muliggjort raskere støtte for nye produkter og regelendringer  
+- Bygget bro mellom on-prem og sky (hybrid)  
+- Bedre brukeropplevelse med innsikt fra trafikkdata, intervjuer og kundesenter
