feat: update beauty salon project with detailed content and Timma integration

--- a/content/projects/beauty-booking.nb.mdx
+++ b/content/projects/beauty-booking.nb.mdx
@@ -1,11 +1,22 @@
 ---
-title: "Nettside og booking for salong"
-slug: "beauty-booking"
+title: "Nettside og booking for Artemova’s Beauty"
+slug: "artemova-beauty"
 role: "Full-stack"
 year: "2024"
-tags: ["Next.js","React","Stripe"]
-summary: "Lanserte rask nettside og bookingflyt."
+tags: ["Next.js","React","Sanity"]
+summary: "Lanserte rask og brukervennlig nettside med integrert booking for skjønnhetssalong."
 ---
 
 ## Oversikt
-…
+Utviklet ny nettside for skjønnhetssalongen *Artemova’s Beauty*, med fokus på moderne design, høy ytelse og enkel bookingflyt.  
+Nettsiden er bygget med **Next.js + React** og **Sanity.io** som CMS, og integrert med **Timma** – en populær bookingløsning for salonger.  
+
+## Tilnærming
+Prosjektet ble gjennomført i tett samarbeid med kunden for å sikre at løsningen støttet både forretningsbehov og kundeopplevelse.  
+Design og innhold er tilpasset for å fremheve salongens tjenester og gjøre det enkelt å bestille time.  
+
+## Resultat
+- Rask og responsiv nettside  
+- Enkel administrasjon av innhold gjennom Sanity  
+- Full bookingintegrasjon med Timma  
+- Bedre kundeopplevelse med smidig bookingflyt  
