--- a/content/projects/beauty-booking.en.mdx
+++ b/content/projects/beauty-booking.en.mdx
@@ -1,11 +1,22 @@
 ---
-title: "Beauty salon site & booking"
-slug: "beauty-booking"
+title: "Artemova’s Beauty – Website & Booking"
+slug: "artemova-beauty"
 role: "Full-stack"
 year: "2024"
-tags: ["Next.js","React","Stripe"]
-summary: "Launched a performant site and booking flow."
+tags: ["Next.js","React","Sanity"]
+summary: "Launched a fast and user-friendly website with integrated booking for a beauty salon."
 ---
 
 ## Overview
-…
+Developed a new website for the beauty salon *Artemova’s Beauty*, focusing on modern design, performance, and a seamless booking flow.  
+The site was built with **Next.js + React** and **Sanity.io** as CMS, integrated with **Timma**, a widely used booking platform for salons.  
+
+## Approach
+The project was carried out in close collaboration with the client to ensure the solution supported both business needs and customer experience.  
+Design and content were tailored to highlight salon services and make booking easy.  
+
+## Outcome
+- Fast and responsive website  
+- Easy content management via Sanity  
+- Full booking integration with Timma  
+- Improved customer experience with a smooth booking flow  
