refactor: rename and add redirects

--- a/content/projects/naturlig-fake.en.mdx
+++ b/content/projects/naturlig-fake.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Artemova’s Beauty – Website & Booking"
-slug: "artemova-beauty"
+title: "Naturlig Fake – Website & Booking"
+slug: "naturlig-fake"
 role: "Full-stack"
 year: "2024"
 tags: ["Next.js","React","Sanity"]
@@ -8,8 +8,10 @@ summary: "Launched a fast and user-friendly website with integrated booking for 
 ---
 
 ## Overview
-Developed a new website for the beauty salon *Artemova’s Beauty*, focusing on modern design, performance, and a seamless booking flow.  
+Developed a new website for the beauty salon *Naturlig Fake*, focusing on modern design, performance, and a seamless booking flow.  
 The site was built with **Next.js + React** and **Sanity.io** as CMS, integrated with **Timma**, a widely used booking platform for salons.  
+
+Visit the site at [naturligfake.no](https://naturligfake.no).
 
 ## Approach
 The project was carried out in close collaboration with the client to ensure the solution supported both business needs and customer experience.  
